--- a/config/sync/views.view.listagem_dos_parques.yml
+++ b/config/sync/views.view.listagem_dos_parques.yml
@@ -615,6 +615,7 @@ display:
         style: false
         row: false
         fields: false
+        pager: false
       row:
         type: fields
         options:
@@ -752,6 +753,27 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+      pager:
+        type: full
+        options:
+          items_per_page: 3
+          offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
     cache_metadata:
       max-age: -1
       contexts:
